# Agentic-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.prod  README.md  UX-ENHANCEMENT-SUMMARY.md  Untitled  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml  setup_neon.sql  vercel.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 43ff64d24708_add_users_conversations_owner.py  8d46490afa86_initial_tables.py
app/: exceptions.py  main.py  middleware.py
app/agent/: engines.py  graph.py  models.py  tools.py
app/api/: health.py
app/api/v1/: agent.py  auth.py  conversations.py  feedback.py  rag.py
app/billing/: service.py
app/cache/: __init__.py  rag.py  ratelimit.py
app/core/: auth.py  config.py  logging.py  security.py
app/db/: init.py  models.py  session.py
app/infrastructure/: r2.py  security.py
app/llm/: client.py
app/memory/: store.py
app/middleware/: __init__.py  auth.py  legacy.py  rate_limiter.py  request_id.py  security_headers.py  timing.py
app/rag/: agent.py  chunking.py  embeddings.py  pipeline.py  retrieval.py
app/storage/: r2.py
tests/: test_agent.py  test_health.py
web/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
web/scripts/: run-tests.sh
web/src/: App.css  App.tsx  AuthScreen.tsx  auth.ts  index.css  main.tsx  securityHeaders.ts
web/src/components/: AssistantMessage.tsx  InputArea.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  MsgActions.tsx  ScrollContainer.tsx  Sidebar.tsx  Skeleton.tsx  UserMessage.tsx  WelcomeScreen.tsx
web/src/hooks/: useChat.ts  useStreamingChat.ts
web/src/services/: api.ts
web/test-results/: .last-run.json
web/test-results/chat-AI-Chat-App-new-chat-button-visible-Mobile-Chrome/: error-context.md  video.webm
web/test-results/chat-AI-Chat-App-sidebar-visible-on-main-screen-Mobile-Chrome/: error-context.md  video.webm
web/test-results/demo-Demo-Full-UX-Flow-3-Sidebar-shows-conversations-Mobile-Chrome/: error-context.md  video.webm
web/test-results/demo-Demo-Full-UX-Flow-4-F-a2635-t-header-input-and-features-Desktop-Chrome/: error-context.md  video.webm
web/test-results/input-Input-Area-UX-Functi-b07cb-hen-empty-enabled-when-text-Desktop-Chrome/: error-context.md  video.webm
web/test-results/sidebar-Sidebar-UX-Functio-80792-input-is-visible-and-usable-Mobile-Chrome/: error-context.md  video.webm
web/test-results/sidebar-Sidebar-UX-Functio-b83e1-n-is-visible-and-accessible-Mobile-Chrome/: error-context.md  video.webm
web/test-results/ui-AI-Chat-App-input-area-visible-and-usable-on-main-screen-Desktop-Chrome/: error-context.md  video.webm
web/test-results/ui-AI-Chat-App-new-chat-button-visible-Mobile-Chrome/: error-context.md  video.webm
web/test-results/ui-AI-Chat-App-sidebar-visible-on-main-screen-Mobile-Chrome/: error-context.md  video.webm
web/test-results/ux-UX-Quality-Tests-access-23b9a-e-styled-with-proper-colors-Desktop-Chrome/: video.webm
web/test-results/ux-UX-Quality-Tests-access-23b9a-e-styled-with-proper-colors-Mobile-Chrome/: error-context.md  video.webm
web/test-results/ux-UX-Quality-Tests-visual-4e3dc-ents-have-proper-prominence-Mobile-Chrome/: error-context.md  video.webm
web/test-results/visual-Visual-Regression-T-86571-t-interface-visual-snapshot-Desktop-Chrome/: error-context.md  video.webm
web/test-results/visual-Visual-Regression-Tests-tablet-layout-visual-snapshot-Mobile-Chrome/: error-context.md  video.webm
web/tests/: auth.spec.ts  chat.spec.ts  demo.spec.ts  input.spec.ts  performance.spec.ts  sidebar.spec.ts  ui.spec.ts  ux.spec.ts  visual.spec.ts
