 [tool.poetry]
 name = "agentic-ai"
 version = "0.1.0"
 description = "Production-ready Agentic AI service (FastAPI + LangGraph)"
 authors = ["vihaan <dev@local>"]
 readme = "README.md"
 packages = [{ include = "app" }]
 
 [tool.poetry.dependencies]
python = ">=3.11,<3.14"
 fastapi = "^0.115.0"
 uvicorn = { version = "^0.30.0", extras = ["standard"] }
 pydantic = "^2.8.0"
 pydantic-settings = "^2.4.0"
 python-dotenv = "^1.0.1"
 structlog = "^24.4.0"
 httpx = "^0.27.0"
 langgraph = "^0.2.0"
 langchain-core = "^0.3.0"
 langchain-openai = "^0.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
 pytest-asyncio = "^0.24.0"
 ruff = "^0.6.0"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 asyncio_mode = "auto"
 
 [tool.ruff]
 line-length = 100
 target-version = "py311"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "B", "UP"]
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
